--- a/kmom05/dom/index.html
+++ b/kmom05/dom/index.html
@@ -11,6 +11,6 @@
     <div id="content" class="content">
         <div id="box1" class="box center green size200"></div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="js/main-kmom05.js"></script>
 </body>
 </html>
