--- a/kmom05/dom/index.html
+++ b/kmom05/dom/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Javascript 1 - Kmom 05</title>
     <meta charset="utf-8">
-    <link rel='shortcut icon' href='img/icon.js.png'/>
+    <link rel="shortcut icon" href="img/icon.js.png"/>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=2.0;">
     <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
