Small design ajustments

--- a/kmom06/hangman/index.html
+++ b/kmom06/hangman/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" type="text/css" href="style/main-style.css">
 </head>
 <body>
-<aside>
-    <div id="alphabet">
-    </div>
-</aside>
+<div class="content">
+    <aside>
+        <div id="alphabet">
+        </div>
+    </aside>
 
-<div id="container" class="container">
+    <div id="container" class="container">
     <svg xmlns="http://www.w3.org/2000/svg" width="400" height="500" id="hangman_svg">
         <defs id="defs4">
             <filter id="filter12239">
@@ -473,6 +474,7 @@
        width="11.75" />
   </g>
     </svg>
+</div>
 </div>
 <div id="secret-word"></div>
 <div id="message"></div>
