--- a/kmom10/intelligence/index.html
+++ b/kmom10/intelligence/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" type="text/css" href="style/main-style.css">
 </head>
 <body>
-    <div id="header">
-    </div>
-    <div id="content" class="content">
+    <div id="container" class="container">
+        <div id="header" class="header">
+        </div>
+        <div id="content" class="content">
+        </div>
     </div>
     <script src="js/tools.js"></script>
     <script src="js/test5.js"></script>
