--- a/kmom10/intelligence/index.html
+++ b/kmom10/intelligence/index.html
@@ -15,6 +15,7 @@
         </div>
     </div>
     <script src="js/tools.js"></script>
+    <script src="js/resultat.js"></script>
     <script src="js/test5.js"></script>
     <script src="js/test4.js"></script>
     <script src="js/test3.js"></script>
